Screenshots and readme file included

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
     <string name="project_submission">Project Submission</string>
     <string name="last_name">Last Name</string>
     <string name="email_address">Email Address</string>
+    <string name="checked_green">Checked Green</string>
+    <string name="submission_successful">Submission Successful</string>
+    <string name="back">back</string>
+    <string name="first_name">First Name</string>
+    <string name="project_on_github_link">Project on GITHUB (link)</string>
 </resources>
